--- a/ansible-solution/Vagrantfile
+++ b/ansible-solution/Vagrantfile
@@ -39,8 +39,9 @@ Vagrant.configure("2") do |config|
       end
       config.vm.synced_folder "../", "/vagrant"
       config.vm.host_name = "node#{idx}.domain.name"
-     # config.vm.network :private_network, type: "dhcp"
+      config.vm.network "public_network", bridge: "en0: Wi-Fi (AirPort)", ip: "192.168.1.10#{idx}"
       config.vm.provision 'shell', :inline => <<-SHELL
+      route add default gw 192.168.1.1
       apt-get install -y apt-transport-https curl
       curl -s https://packages.cloud.google.com/apt/doc/apt-key.gpg | apt-key add -
       echo "deb http://apt.kubernetes.io/ kubernetes-xenial main" > /etc/apt/sources.list.d/kubernetes.list
